<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.caloriecounter2.ui.editMeal.EditMealViewModel" />
        <import type="com.example.caloriecounter2.helper.Converter"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/editMeal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.editMeal.EditMealActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.CalorieCounter2.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.CalorieCounter2.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/update_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/save_changes"
            android:onClick="@{() -> viewModel.update()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_meal_back"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/edit_meal_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> viewModel.back()}"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/update_meal"/>

        <TextView
            android:id="@+id/mealNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:text="@string/meal_name"
            app:layout_constraintEnd_toStartOf="@id/mealNameEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <TextView
            android:id="@+id/calorieCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/calorie_count"
            app:layout_constraintEnd_toStartOf="@+id/calorieCountTextInput"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealNameLabel" />

        <EditText
            android:id="@+id/mealNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/paprikas_krumpli"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.mealName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mealNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <EditText
            android:id="@+id/calorieCountTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/_600"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.intToString(viewModel.mealCalorieCount)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/calorieCountTextView"
            app:layout_constraintTop_toBottomOf="@+id/mealNameEdit" />

        <EditText
            android:id="@+id/proteinCountTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/_40"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.doubleToString(viewModel.mealProteinCount)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/proteinCountTextView"
            app:layout_constraintTop_toBottomOf="@+id/calorieCountTextInput" />

        <EditText
            android:id="@+id/carbCountTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/_50"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.doubleToString(viewModel.mealCarbCount)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/carbCountTextView"
            app:layout_constraintTop_toBottomOf="@+id/proteinCountTextInput" />

        <EditText
            android:id="@+id/fatCountTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/_20"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.doubleToString(viewModel.mealFatCount)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fatCountTextView"
            app:layout_constraintTop_toBottomOf="@+id/carbCountTextInput" />

        <TextView
            android:id="@+id/proteinCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/protein_g"
            app:layout_constraintEnd_toStartOf="@+id/proteinCountTextInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calorieCountTextView" />

        <TextView
            android:id="@+id/carbCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/carb_g"
            app:layout_constraintEnd_toStartOf="@+id/carbCountTextInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proteinCountTextView" />

        <TextView
            android:id="@+id/fatCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/fat_g"
            app:layout_constraintEnd_toStartOf="@+id/fatCountTextInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carbCountTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


